fix: css images not showing up

--- a/src/app/components/templates/home/hero/styles.module.scss
+++ b/src/app/components/templates/home/hero/styles.module.scss
@@ -90,7 +90,7 @@
 
 :global(.darkTheme) .home {
   &Background {
-    background: url(app/images/Alexander_Rossi-A_Summers_Tale.jpeg);
+    background: url('app/images/Alexander_Rossi-A_Summers_Tale.jpeg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
